<resources>
    <string name="app_name">Fundall</string>
    <string name="start">Start</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="your_first_step_towards_a_better_financial_lifestyle_starts_here">Your first step towards a better
        financial lifestyle starts here
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="benefits">Benefits</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="got_invite_code">Got invite code?</string>
    <string name="sign_up">sign up</string>
    <string name="already_a_member">Already a member?Log in</string>
    <string name="log_in">Log in</string>
    <string name="biometrics">Biometrics</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="new_here_create_account">new here? Create Account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="we_miss_you">We miss you, %s</string>

    <string name="lifestyle">%s\'s lifestyle</string>
    <string name="switch_account">Switch Account</string>
    <string name="not_switch_account">Not %s? Switch Account</string>
    <string name="fundall_e_wallet">FundAll e-Wallet</string>
    <string name="account_id"><b>Account ID:</b> 901672789, Providus</string>
    <string name="total_balance">Total Balance</string>
    <string name="_12_346">₦12,346.37</string>
    <string name="income">Income</string>
    <string name="spent">Spent</string>
    <string name="request_for_new_lifestyle_card">Request for new Lifestyle Card</string>
    <string name="add_other_cards">Add other cards</string>
    <string name="manage_card_settings">Manage Card Settings</string>
    <string name="cards">Cards</string>


</resources>
