<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="24dp"
            android:layout_height="match_parent"
            tools:context=".signUp.SignUpFragment">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"
                  android:text="@string/cancel"
                  android:id="@+id/cancelTextView"
                  android:textColor="@android:color/black"
                  app:layout_constraintTop_toTopOf="@id/welcomeBackTextView"
                  app:layout_constraintBottom_toBottomOf="@id/welcomeBackTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  android:paddingStart="8dp"
                  android:paddingEnd="8dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/welcomeBackTextView"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:visibility="invisible"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/welcome_back"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="@id/welcomeBackTextView"
                  app:layout_constraintBottom_toBottomOf="@id/welcomeBackTextView"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:paddingStart="8dp"
                  android:paddingEnd="8dp"
                  android:text="@string/benefits"
                  android:textColor="@android:color/black"
                  android:textSize="12sp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  tools:text="Let's get Started"
                  android:layout_marginTop="48dp"
                  android:textStyle="bold"
                  android:id="@+id/startedTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/cancelTextView"
                  android:text="@string/let_s_get_started"
                  android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/startedTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="8dp"
                  android:text="@string/your_first_step_towards_a_better_financial_lifestyle_starts_here"
                  android:textSize="12sp"
                  android:id="@+id/freedomTextView"
                  android:textColor="@color/colorAccent"
                  tools:text="Your first step towards a better financial lifestyle starts here"/>


        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintStart_toStartOf="parent"
                                                               android:id="@+id/firstNameInputLayout"
                                                               android:layout_marginTop="32dp"
                                                               android:layout_marginEnd="8dp"
                                                               app:layout_constraintTop_toBottomOf="@id/freedomTextView"
                                                               app:layout_constraintHorizontal_bias="0.5"
                                                               app:layout_constraintEnd_toStartOf="@+id/lastNameInputLayout">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:hint="@string/first_name"
                                                                     android:inputType="text"
                                                                     android:textSize="12sp"
                                                                     android:id="@+id/firstNameEditText"
                                                                     android:backgroundTint="@color/editsColor"
                                                                     android:drawableStart="@drawable/ic_person_grey_24dp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:layout_marginTop="32dp"
                                                               android:layout_marginStart="8dp"
                                                               android:id="@+id/lastNameInputLayout"
                                                               app:layout_constraintTop_toBottomOf="@id/freedomTextView"
                                                               app:layout_constraintStart_toEndOf="@+id/firstNameInputLayout"
                                                               app:layout_constraintHorizontal_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:hint="@string/last_name"
                                                                     android:inputType="text"
                                                                     android:textSize="12sp"
                                                                     android:id="@+id/lastNameEditText"
                                                                     android:backgroundTint="@color/editsColor"
                                                                     android:drawableStart="@drawable/ic_person_grey_24dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintStart_toStartOf="parent"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:id="@+id/emailInputLayout"
                                                               app:layout_constraintTop_toBottomOf="@id/firstNameInputLayout"
                                                               android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:backgroundTint="@color/editsColor"
                                                                     android:textSize="12sp"
                                                                     android:inputType="textEmailAddress"
                                                                     android:id="@+id/emailEditText"
                                                                     android:hint="@string/email_address"
                                                                     android:drawableStart="@drawable/ic_email_black_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
                                                               app:layout_constraintStart_toStartOf="parent"
                                                               android:layout_marginTop="8dp"
                                                               android:id="@+id/phoneInputLayout"
                                                               app:layout_constraintEnd_toEndOf="parent"
        >
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:textSize="12sp"
                                                                     android:id="@+id/phoneEditText"
                                                                     android:inputType="phone"
                                                                     android:backgroundTint="@color/editsColor"
                                                                     android:drawableStart="@drawable/ic_local_phone_grey_24dp"
                                                                     android:hint="@string/phone_number"

            />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintTop_toBottomOf="@id/phoneInputLayout"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               app:boxBackgroundColor="@android:color/white"
                                                               android:id="@+id/passwordInputLayout"
                                                               app:passwordToggleEnabled="true"
                                                               app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:id="@+id/passwordEditText"
                    style="@style/fieldTheme"
                    android:hint="@string/password"
                    android:backgroundTint="@color/editsColor"
                    android:drawableStart="@drawable/ic_lock_grey_24dp"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                  android:layout_marginTop="16dp"
                  android:id="@+id/gotInviteTextView"
                  android:textSize="12sp"
                  android:text="@string/got_invite_code"
                  android:textColor="@color/editsColor"
        />

        <Button android:layout_width="240dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:id="@+id/signUpButton"
                android:backgroundTint="@color/editsColor"
                android:text="@string/sign_up"
                app:layout_constraintTop_toBottomOf="@id/gotInviteTextView"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/already_a_member"
                  android:id="@+id/alreadyAMemberTextView"
                  android:layout_marginTop="8dp"
                  app:layout_constraintEnd_toEndOf="@id/signUpButton"
                  app:layout_constraintStart_toStartOf="@id/signUpButton"
                  app:layout_constraintTop_toBottomOf="@id/signUpButton"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="@id/alreadyAMemberTextView"
                  app:layout_constraintBottom_toBottomOf="@id/alreadyAMemberTextView"
                  app:layout_constraintEnd_toEndOf="@id/alreadyAMemberTextView"
                  android:id="@+id/loginTextView"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:text="@string/log_in"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>