<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            tools:context=".WelcomeBackFragment">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"
                  android:text="@string/cancel"
                  android:id="@+id/cancelTextView"
                  android:textColor="@android:color/black"
                  app:layout_constraintTop_toTopOf="@id/welcomeBackTextView"
                  app:layout_constraintBottom_toBottomOf="@id/welcomeBackTextView"
                  app:layout_constraintStart_toStartOf="parent"
                  android:paddingStart="8dp"
                  android:paddingEnd="8dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/welcomeBackTextView"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/welcome_back"/>

        <com.mikhaellopez.circularimageview.CircularImageView android:layout_width="114dp"
                                                              android:layout_height="114dp"
                                                              app:layout_constraintTop_toBottomOf="@id/welcomeBackTextView"
                                                              android:layout_marginTop="32dp"
                                                              android:id="@+id/profileImageView"
                                                              app:layout_constraintStart_toStartOf="parent"
                                                              app:layout_constraintEnd_toEndOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="32dp"
                  app:layout_constraintTop_toBottomOf="@id/profileImageView"
                  android:id="@+id/missYouTextView"
                  android:layout_marginStart="16dp"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  tools:text="We miss you, Chimidi?"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/missYouTextView"
                  android:id="@+id/emailTextView"
                  android:layout_marginStart="16dp"
                  android:textColor="@android:color/black"
                  tools:text="arepade.obiri@hotmail.com"
                  android:layout_marginTop="8dp"
                  android:textStyle="italic"/>


        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintStart_toStartOf="parent"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:id="@+id/emailInputLayout"
                                                               android:layout_marginBottom="8dp"
                                                               app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
                                                               android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:backgroundTint="@color/editsColor"
                                                                     android:textSize="12sp"
                                                                     android:inputType="textEmailAddress"
                                                                     android:id="@+id/emailEditText"
                                                                     android:hint="@string/email_address"

                                                                     android:drawableStart="@drawable/ic_email_black_24dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="0dp"
                                                               android:layout_height="wrap_content"
                                                               app:layout_constraintTop_toBottomOf="@id/emailTextView"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:layout_marginTop="64dp"
                                                               app:boxBackgroundColor="@android:color/white"
                                                               android:id="@+id/passwordInputLayout"
                                                               app:passwordToggleEnabled="true"
                                                               app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    style="@style/fieldTheme"
                    android:hint="@string/password"
                    android:backgroundTint="@color/editsColor"
                    android:drawableStart="@drawable/ic_lock_grey_24dp"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <Button android:layout_width="240dp" android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:id="@+id/signUpButton"
                android:backgroundTint="@color/editsColor"
                android:text="@string/log_in"
                app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"/>


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/signUpButton"
                  android:layout_marginTop="32dp"
                  android:id="@+id/newHereTextView"
                  app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
                  android:text="@string/new_here_create_account"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toTopOf="@id/newHereTextView"
                  app:layout_constraintBottom_toBottomOf="@id/newHereTextView"
                  app:layout_constraintEnd_toEndOf="@id/newHereTextView"
                  android:text="@string/create_account"
                  android:textColor="@android:color/black"


        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
                  app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                  android:text="@string/forgot_password"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>