<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent"

            tools:context=".LoginOptionFragment">
        <ImageView android:layout_width="0dp" android:layout_height="0dp"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:src="@drawable/ic_login_option"
                   android:scaleType="fitXY"/>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:src="@drawable/ic_fundall_icon"
                   android:id="@+id/iconImageView"
                   app:layout_constraintVertical_bias="0.417"/>
        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/iconImageView"
                  android:layout_marginTop="32dp"
                  android:textSize="32sp"
                  android:id="@+id/lifestyleTextView"
                  tools:text="Chimidi's lifestyle"
                  android:textColor="@android:color/white"
                  android:gravity="center"/>

        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:id="@+id/switchAccountTextView"
                  app:layout_constraintTop_toBottomOf="@id/lifestyleTextView"
                  tools:text="Not Chimidi?Switch Account"
                  android:textColor="@android:color/white"
                  android:layout_marginTop="8dp"
                  android:gravity="center"/>

        <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/switchAccountTextView"
                  android:textColor="@android:color/white"
                  android:text="@string/new_here_create_account"
                  android:gravity="center"

        />


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/password"
                  android:textColor="@android:color/white"
                  android:padding="24dp"
                  android:id="@+id/passwordTextView"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/biometrics"
                  android:id="@+id/biometricsTextView"
                  android:textColor="@android:color/white"
                  android:padding="24dp"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


